# omnimind

./: .bandit  .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT_ARCHITECTURE_RESEARCH.md  CHATGPT_TERMINAL_GUIDE.md  CLAUDE_CODE_AGENTS.md  CRITICAL_ANALYSIS_OSA_FEASIBILITY.md  FREE_PREMIUM_ACCESS.md  HYBRID_SYSTEM.md  LICENSE  LOCAL_MODELS_READY.md  MCP_INTEGRATION_STRATEGY.md  OPEN_SOURCE_OPPORTUNITIES.md  OSA_ARCHITECTURE_PRINCIPLES.md  OSA_AUTONOMOUS.md  OSA_CLAUDE_STYLE.md  OSA_COMPLETE_README.md  OSA_CORE_VISION.md  OSA_FINAL.md  OSA_INTELLIGENCE_ARCHITECTURE.md  OSA_TRANSPARENCY_ROADMAP.md  OSA_ULTIMATE_VISION.md  OSA_UNIQUE_CAPABILITIES.md  OSA_VS_AGENTIC_CC.md  PLATFORM_FOUNDATION_ANALYSIS.md  PROJECT_ASSESSMENT.md  PROJECT_REASSESSMENT.md  README.md  TEAMS_TIER_BENEFITS.md  TODO_SUMMARY.md  USAGE.md  add_api_keys.py  claude_code_integration.py  create_demo.py  demo_animation.py  demo_autonomous.py  demo_claude_style.py  demo_frames.txt  (+50 more)
.github/workflows/: quality-gates.yml  tests.yml
config/: local_models.json
docs/: CODING_STANDARDS.md  CONTRIBUTING.md  DEVELOPMENT_TOOLS.md  _config.yml  demo.md  index.html
modules/persistent-ai-memory/: README.md  setup.py
modules/persistent-ai-memory/src/: __init__.py
modules/persistent-ai-memory/tests/: test_memory.py
scripts/: install-dev-tools.sh  install_mcp_servers.sh  setup.sh
src/: __init__.py  cli.py  main.py  omnimind_super_agent.py  osa_claude_orchestrator.py  osa_complete.py  osa_complete_final.py  osa_continuous_learning.py  osa_enhanced.py  web_ui.py
src/agents/: __init__.py  agent_registry.py  base.py  omnimind_agent.py
src/agents/specialized/: backend_architect_agent.py  chatgpt_browser_agent.py  chatgpt_terminal_agent.py  claude_opus_agent.py  claude_opus_teams_agent.py  devops_automator_agent.py  frontend_developer_agent.py
src/core/: __init__.py  action_hooks.py  agent_orchestrator.py  code_generator.py  command_approval.py  langchain_engine.py  llm_orchestrator.py  logger.py  mcp_client.py  memory_adapter.py  memory_persistence.py  metrics.py  omnimind.py  omnimind_enhanced.py  osa.py  osa_autonomous.py  osa_minimal.py  readiness.py  self_learning.py  task_planner.py  thinking_states.py
src/core/modules/: architecture_reviewer.py  thinking.py
src/providers/: __init__.py  anthropic_provider.py  base.py  chatgpt5_provider.py  claude_opus_provider.py  google_provider.py  intelligent_router.py  manager.py  ollama_provider.py  openai_provider.py
src/utils/: infisical_loader.py
tests/: conftest.py
tests/integration/: test_osa_complete.py
tests/performance/: test_thinking_performance.py
tests/regression/: test_known_issues.py
tests/security/: test_security_vulnerabilities.py
tests/unit/: test_api_providers.py  test_continuous_learning.py  test_continuous_thinking.py
tools/: dependency_check.py  dev_setup.py  performance_monitor.py  quality_checks.py
web/: app.js  index.html
wiki/: Getting-Started.md  Home.md
